trunk/Archive2/83/5b5840f552047e/output
main.cpp: In function 'int main()':
main.cpp:426:5: error: could not convert '{Block(4), Block(16), Block(4), Block(16), Block(4), Block(16), Block(4), Block(2), Block(4), Block(16), Block(4), Block(2), Block(4), Block(2), Block(4), Block(16), Block(4), Block(2), Block(4), Block(16), Block(4), Block(16), Block(4), Block(16), Block(4)}' from '<brace-enclosed initializer list>' to 'Board<5u>'
     };
     ^
